# condocharge-platform

./: .env.example  .gitignore  CHANGELOG.md  README.md  REMOVE_FROM_REPO.md  SAFE_PUBLISH_WHITELIST.md  debug-french-csv-headers.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  backup_database.ps1  install_agent_service.ps1  pyproject.toml  restart_agent_service.ps1  restore_database.ps1  start_public_demo.py  uninstall_agent_service.ps1
backend/alembic/: env.py
backend/alembic/versions/: 0001_charging_sessions.py  0002_tenancy_auth.py  0003_resident_costs_status.py  0004_billing_and_settlement.py  0005_invoices_and_payments.py  0006_payments_reconciliation_notifications.py  0007_payment_import_and_email_delivery.py  0008_payment_operations_hardening.py  0009_collections_async_operations.py  0010_resident_notification_preferences.py  0011_app_user_profile_and_password_flags.py  0012_pilot_condominium_cleanup_and_activation.py  (+16 more)
backend/tests/: conftest.py  test_admin_notification_logs.py  test_agent_ingestion.py  test_agent_phase2_sync.py  test_agent_service.py  test_agent_tool.py  test_api_v1.py  test_auth_tenant.py  test_backup_restore_scripts.py  test_billing.py  test_legrand_discovery.py  test_legrand_driver.py  test_legrand_driver_cli.py  test_push_notifications.py  test_queue_foundation.py  test_resident_costs.py  test_resident_invitations.py  test_resident_notifications.py  test_runtime_hardening.py  test_security_hardening.py  test_session_sync_service.py  test_smoke.py  test_start_public_demo.py  test_system_health.py  test_telegram_notifications.py
(+188 files in other folders)
