[project]
name = "condocharge"
version = "0.1.0"
description = "Condominium EV charging management platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "mitmproxy>=11.0",
  "playwright>=1.45",
  "pywin32>=306; platform_system == 'Windows'",
  "tzdata>=2024.1",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "python-multipart>=0.0.9",
  "pyjwt>=2.8",
  "pywebpush>=2.0",
  "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "types-PyJWT>=1.7",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
mypy_path = ["src"]
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
